Start on about page

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -28,7 +28,7 @@
   color: rgb(70, 238, 126);
 }
 
-header .content {
+.Header__Content {
   color: white;
   display: inline-block;
   vertical-align: middle;
@@ -36,6 +36,31 @@ header .content {
   width: 100%;
   padding-bottom: 30px;
   text-align: center;
+}
+
+/* scrolldown link */
+header .scrolldown a {
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  margin-left: -29px;
+  color: #fff;
+  display: block;
+  height: 42px;
+  width: 42px;
+  font-size: 42px;
+  line-height: 42px;
+  color: #fff;
+  border-radius: 100%;
+
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+header .scrolldown a:hover {
+  color: #0762f9;
 }
 
 .right-buttons {
