--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -15,6 +15,14 @@
   float: left;
 }
 
+.navbar {
+  overflow: hidden;
+  background-color: #212020;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
+}
+
 .navbar li a {
   display: block;
   color: rgb(32, 179, 76);
@@ -29,29 +37,26 @@
 }
 
 .Header__Content {
-  color: white;
   display: inline-block;
   vertical-align: middle;
-  margin: 0 auto;
+  margin-top: 30px;
   width: 100%;
   padding-bottom: 30px;
   text-align: center;
 }
 
 /* scrolldown link */
-header .scrolldown a {
-  position: absolute;
-  bottom: 30px;
-  left: 50%;
-  margin-left: -29px;
-  color: #fff;
-  display: block;
-  height: 42px;
-  width: 42px;
-  font-size: 42px;
-  line-height: 42px;
-  color: #fff;
-  border-radius: 100%;
+.Header__Down-Button {
+  background-color: rgb(32, 179, 76);
+  border: none;
+  color: #212020;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  border-radius: 50%;
 
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
@@ -59,8 +64,13 @@ header .scrolldown a {
   transition: all 0.3s ease-in-out;
 }
 
-header .scrolldown a:hover {
-  color: #0762f9;
+.Header__Down-Button:hover {
+  background-color: rgb(70, 238, 126);
+}
+
+.Header__DownIcon {
+  height: 10px;
+  width: auto;
 }
 
 .right-buttons {
