--- a/src/Components/SpaceInvaders/SpaceInvaders.css
+++ b/src/Components/SpaceInvaders/SpaceInvaders.css
@@ -1,5 +1,8 @@
 canvas {
-  margin: 25px 25px 10px 25px;
   border-bottom: 1px solid;
   border-color: rgb(32, 179, 76);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
