--- a/src/Components/HappyBirthday2/HappyBirthday2.css
+++ b/src/Components/HappyBirthday2/HappyBirthday2.css
@@ -2,6 +2,14 @@
   height: 20vh;
 }
 
+.content {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+  
 .happy-birthday h1 {
     font-size: calc(0.75em + 1vmin);
 }
